--- a/multisla/src/main/resources/templates/center.html
+++ b/multisla/src/main/resources/templates/center.html
@@ -10,10 +10,10 @@
         <div class="row" >
             <div class="main_home text-center">
                 <div class="home_text">
-                     <h1 class="text-white text-uppercase">MODEL1</h1>
+                     <h1 class="text-white text-uppercase">MODEL Y</h1>
                      <div class="separator"></div>
-                    <button type="button" onClick="location.href='/carbuild'" class="btn btn-primary">내 차 만들기</button>
-                    <button type="button" href="#" class="btn btn-default">자세히 알아보기</button>                
+                    <button type="button" onClick="location.href='#'" class="btn btn-primary">내 차 만들기</button>
+                    <button type="button" onClick="location.href='#'" class="btn btn-default">자세히 알아보기</button>                
                 </div>
             </div>
         </div><!--End off row-->
@@ -27,7 +27,7 @@
         <div class="row">
             <div class="main_home2 text-center">
                 <div class="home2_text">
-                     <h1 class="text-white text-uppercase">MODEL2</h1>
+                     <h1 class="text-white text-uppercase">MODEL S</h1>
                      <div class="separator"></div>
                     <button type="button" href="#" class="btn btn-primary">내 차 만들기</button>
                     <button type="button" href="#" class="btn btn-default">자세히 알아보기</button> 
@@ -43,7 +43,7 @@
         <div class="row">
             <div class="main_home3 text-center">
                 <div class="home3_text">
-                     <h1 class="text-white text-uppercase">MODEL3</h1>
+                     <h1 class="text-white text-uppercase">MODEL X</h1>
                      <div class="separator"></div>
                     <button type="button" href="#" class="btn btn-primary">내 차 만들기</button>
                     <button type="button" href="#" class="btn btn-default">자세히 알아보기</button>                 </div>
@@ -54,16 +54,13 @@
 
 <section id="hello" class="home4 bg-mega">
     <div class="overlay"></div>
-    <div class="container">
         <div class="row">
             <div class="main_home4 text-center">
                 <div class="home4_text">
-                   <h1 class="text-white text-uppercase">MODEL4</h1>
+                   <h1 class="text-white text-uppercase">Cybertruck</h1>
                      <div class="separator"></div>
-                    <button type="button" href="#" class="btn btn-primary">내 차 만들기</button>
-                    <button type="button" href="#" class="btn btn-default">자세히 알아보기</button>                 </div>
-            </div>
-        </div><!--End off row-->
-	</div><!--End off container -->
+                </div>
+        	</div><!--End off row-->
+		</div><!--End off container -->
 </section> <!--End off Home Sections-->
 </html>
