--- a/multisla/src/main/resources/templates/detail/modelSdetail.html
+++ b/multisla/src/main/resources/templates/detail/modelSdetail.html
@@ -33,8 +33,7 @@
 	    <div class="overlay"></div>
 	    <div class="container">
 	        <div class="row">
-	            <h1 class="text-black text-center" style="margin-top: 150px">Model S</h1>
-	            </div>
+	            <h1 class="feature_photo wow fadeInUp text-black text-center" style="margin-top: 150px">Model S</h1>
 	            <div class="main_home text-center">
 	                <div class="home_text">
 	                </div>
