--- a/multisla/src/main/resources/templates/detail/modelYdetail.html
+++ b/multisla/src/main/resources/templates/detail/modelYdetail.html
@@ -155,6 +155,7 @@
 		   		<p>Tesla AWD는 더 나은 핸들링, 트랙션 및 안전성 컨트롤을 위해 두 개의 독립 전기 모터가 민첩하게 전면 및 후면 휠의 토크를 디지털로 제어합니다. Model Y는 비, 눈, 진흙 및 오프로드 노면에서도 높은 주행 퍼포먼스를 발휘합니다.</p>
 			</div>
 		</div>
+		<div class="col-md-3"></div>
 	</div>
 </section><!--End off Dual Motor -->
 
