--- a/multisla/src/main/resources/templates/carbuild/modelX.html
+++ b/multisla/src/main/resources/templates/carbuild/modelX.html
@@ -30,7 +30,7 @@
 </style>
 <script>
 $(document).ready(function(){
-	$("#carimg").attr('src', 'assets/images/carbuild/modely/modely_black_w19.png')
+	$("#carimg").attr('src', 'assets/images/carbuild/modelx/modelx_black_w19.png')
 	$('input[name="colid"], input[name="wid"]').click(function(){
 		var c = $('input[name="colid"]:checked').val();
 		var w = $('input[name="wid"]:checked').val();
@@ -38,34 +38,34 @@ $(document).ready(function(){
 		if (c == 200) {
 			if (w == 300) {
 				$("#carimg").fadeOut(100);
-				$("#carimg").attr('src','assets/images/carbuild/modely/modely_black_w19.png').fadeIn(300);
+				$("#carimg").attr('src','assets/images/carbuild/modelx/modelx_black_w19.png').fadeIn(300);
 			}else if (w == 301) {
 				$("#carimg").fadeOut(100);
-				$("#carimg").attr('src', 'assets/images/carbuild/modely/modely_black_w21.png').fadeIn(300);
+				$("#carimg").attr('src', 'assets/images/carbuild/modelx/modelx_black_w21.png').fadeIn(300);
 			}
 		}else if (c == 201) {
 			if (w == 300) {
 				$("#carimg").fadeOut(100);
-				$("#carimg").attr('src', 'assets/images/carbuild/modely/modely_white_w19.png').fadeIn(300);
+				$("#carimg").attr('src', 'assets/images/carbuild/modelx/modelx_white_w19.png').fadeIn(300);
 			}else if (w == 301) {
 				$("#carimg").fadeOut(100);
-				$("#carimg").attr('src', 'assets/images/carbuild/modely/modely_white_w21.png').fadeIn(300);
+				$("#carimg").attr('src', 'assets/images/carbuild/modelx/modelx_white_w21.png').fadeIn(300);
 			}
 		}else if (c == 202) {
 			if (w == 300) {
 				$("#carimg").fadeOut(100);
-				$("#carimg").attr('src', 'assets/images/carbuild/modely/modely_red_w19.png').fadeIn(300);
+				$("#carimg").attr('src', 'assets/images/carbuild/modelx/modelx_red_w19.png').fadeIn(300);
 			}else if (w == 301) {
 				$("#carimg").fadeOut(100);
-				$("#carimg").attr('src', 'assets/images/carbuild/modely/modely_red_w21.png').fadeIn(300);
+				$("#carimg").attr('src', 'assets/images/carbuild/modelx/modelx_red_w21.png').fadeIn(300);
 			}
 		}else if (c == 203) {
 			if (w == 300) {
 				$("#carimg").fadeOut(100);
-				$("#carimg").attr('src', 'assets/images/carbuild/modely/modely_blue_w19.png').fadeIn(300);
+				$("#carimg").attr('src', 'assets/images/carbuild/modelx/modelx_blue_w19.png').fadeIn(300);
 			}else if (w == 301) {
 				$("#carimg").fadeOut(100);
-				$("#carimg").attr('src', 'assets/images/carbuild/modely/modely_blue_w21.png').fadeIn(300);
+				$("#carimg").attr('src', 'assets/images/carbuild/modelx/modelx_blue_w21.png').fadeIn(300);
 			}
 		};
 	});
@@ -75,10 +75,10 @@ $(document).ready(function(){
 		$("#carimg").attr('width','1400px');
 		if (i == 400) {
 			$("#carimg").fadeOut(100);
-			$("#carimg").attr('src','assets/images/carbuild/modely/modely_black_interior.jpg').fadeIn(300);
+			$("#carimg").attr('src','assets/images/carbuild/modelx/modelx_black_interior.jpg').fadeIn(300);
 		}else if (i == 401) {
 			$("#carimg").fadeOut(100);
-			$("#carimg").attr('src','assets/images/carbuild/modely/modely_white_interior.jpg').fadeIn(300);
+			$("#carimg").attr('src','assets/images/carbuild/modelx/modelx_white_interior.jpg').fadeIn(300);
 		};
 	});
 });
@@ -88,7 +88,7 @@ $(document).ready(function(){
 	<div class="row">
 		<!-- 왼쪽 이미지 영역 -->
 		<div class="col-sm-9">
-			<img src="assets/images/carbuild/modely/modely_black.png" id="carimg">
+			<img src="assets/images/carbuild/modelx/modelx_black.png" id="carimg">
 		</div>
 	   
 		<!-- detail 선택 후 주문하기 -->
@@ -97,18 +97,18 @@ $(document).ready(function(){
 			<!-- 모델명 및 사양 -->   
 			<div class="selectbox">
 				<div class="tittle-margin">
-					<h1 class="text-black text-center">MODEL Y</h1>
+					<h1 class="text-black text-center">MODEL X</h1>
 				</div>
 				<div class="col-sm-4 text-center">
-					<h4 style="display:inline;">511</h4>
+					<h4 style="display:inline;">499</h4>
 					<h6 style="display:inline;">km</h6>
 				</div>
 				<div class="col-sm-4 text-center">
-					<h4 style="display:inline;">217</h4>
+					<h4 style="display:inline;">240</h4>
 					<h6 style="display:inline;">km/h</h6>
 				</div>
 				<div class="col-sm-4 text-center">
-					<h4 style="display:inline;">5.0</h4>
+					<h4 style="display:inline;">3.9</h4>
 					<h6 style="display:inline;">초</h6>
 				</div>
 				
@@ -176,7 +176,7 @@ $(document).ready(function(){
 						<label class="labelexpanded">
 							<input type="radio" name="wid" value="300" id="radio" checked="checked" class="wheelid">
 							<div class="radio-btns">
-								<img src="assets/images/carbuild/modely/w_19.png" class="img-circle" alt="w_19" id="w_19">
+								<img src="assets/images/carbuild/modelx/w_19.png" class="img-circle" alt="w_19" id="w_19">
 							</div>
 						</label>
 					</div>
@@ -184,7 +184,7 @@ $(document).ready(function(){
 						<label class="labelexpanded">
 							<input type="radio" name="wid" value="301" id="radio" class="wheelid">
 							<div class="radio-btns">
-								<img src="assets/images/carbuild/modely/w_21.png" class="img-circle" alt="w_21" id="w_21">
+								<img src="assets/images/carbuild/modelx/w_21.png" class="img-circle" alt="w_21" id="w_21">
 							</div>
 						</label>
 					</div> 
