--- a/multisla/src/main/resources/templates/center.html
+++ b/multisla/src/main/resources/templates/center.html
@@ -12,8 +12,8 @@
                 <div class="home_text">
                      <h1 class="text-white text-uppercase">MODEL Y</h1>
                      <div class="separator"></div>
-                    <button type="button" onClick="location.href='#'" class="btn btn-primary">내 차 만들기</button>
-                    <button type="button" onClick="location.href='#'" class="btn btn-default">자세히 알아보기</button>                
+                    <button type="button" onClick="location.href='/buildmodely'" class="btn btn-primary">내 차 만들기</button>
+                    <button type="button" onClick="location.href='/modely'" class="btn btn-default">자세히 알아보기</button>                
                 </div>
             </div>
         </div><!--End off row-->
@@ -29,8 +29,8 @@
                 <div class="home2_text">
                      <h1 class="text-white text-uppercase">MODEL S</h1>
                      <div class="separator"></div>
-                    <button type="button" href="#" class="btn btn-primary">내 차 만들기</button>
-                    <button type="button" href="#" class="btn btn-default">자세히 알아보기</button> 
+                    <button type="button" onClick="location.href='/buildmodels'" class="btn btn-primary">내 차 만들기</button>
+                    <button type="button" onClick="location.href='/models'" class="btn btn-default">자세히 알아보기</button> 
                 </div>
             </div>
         </div><!--End off row-->
@@ -45,8 +45,8 @@
                 <div class="home3_text">
                      <h1 class="text-white text-uppercase">MODEL X</h1>
                      <div class="separator"></div>
-                    <button type="button" href="#" class="btn btn-primary">내 차 만들기</button>
-                    <button type="button" href="#" class="btn btn-default">자세히 알아보기</button>                 </div>
+                    <button type="button" onClick="location.href='/buildmodelx'" class="btn btn-primary">내 차 만들기</button>
+                    <button type="button" onClick="location.href='/modelx'" class="btn btn-default">자세히 알아보기</button>                 </div>
             </div>
         </div><!--End off row-->
 	</div><!--End off container -->
