--- a/multisla/src/main/resources/templates/detail/modelYdetail.html
+++ b/multisla/src/main/resources/templates/detail/modelYdetail.html
@@ -72,7 +72,7 @@
 				    </div>
 				    <div class="feature_photo wow fadeInUp col-md-3">
 				        <div class="pricing_btn m-top-20">
-		                    <a href="/carbuild" class="btn btn-primary">지금 주문하기<i class="fa fa-long-arrow-right"></i></a>
+		                    <a href="/buildmodely" class="btn btn-primary">지금 주문하기<i class="fa fa-long-arrow-right"></i></a>
 		                </div>
 				    </div>
 				</div>				
@@ -103,8 +103,8 @@
 	       </div>		            	
 	       <div class="selectbox2">
 		       <div class="pricing_btn m-top-20">
-		             <a href="/carbuild" class="btn btn-primary">지금 주문하기<i class="fa fa-long-arrow-right"></i></a>
-		        </div>
+		             <a href="/buildmodely" class="btn btn-primary">지금 주문하기<i class="fa fa-long-arrow-right"></i></a>
+		       </div>
 	       </div>
     	</div>
 	</div>
@@ -126,7 +126,7 @@
 		            </div>		            	
 		            <div class="selectbox2">
 			        <div class="pricing_btn m-top-20">
-	                    <a href="/carbuild" class="btn btn-primary">지금 주문하기<i class="fa fa-long-arrow-right"></i></a>
+	                    <a href="/buildmodely" class="btn btn-primary">지금 주문하기<i class="fa fa-long-arrow-right"></i></a>
 	                </div>
 		            </div>
         		</div>
@@ -148,7 +148,7 @@
 			<div class="col-md-4">  
 				<h2>듀얼 모터</h2>
 				<div class="pricing_btn m-top-40">
-	              <a href="/carbuild" class="btn btn-primary">지금 주문하기<i class="fa fa-long-arrow-right"></i></a>
+	              <a href="/buildmodely" class="btn btn-primary">지금 주문하기<i class="fa fa-long-arrow-right"></i></a>
 	            </div>
 			</div>
 			<div class="col-md-8">  
@@ -185,7 +185,7 @@
 			            </div>		            	
 			            <div class="selectbox2">
 				        <div class="pricing_btn m-top-20">
-			                   <a href="/carbuild" class="btn btn-primary">지금 주문하기<i class="fa fa-long-arrow-right"></i></a>
+			                   <a href="/buildmodely" class="btn btn-primary">지금 주문하기<i class="fa fa-long-arrow-right"></i></a>
 			               </div>
 			            </div>
 		      		</div>
@@ -296,7 +296,7 @@
 			<div class="col-md-4">  
 				<h2>운전자 중심의<br>디자인</h2>
 				<div class="pricing_btn m-top-40">
-	              <a href="/carbuild" class="btn btn-primary">지금 주문하기<i class="fa fa-long-arrow-right"></i></a>
+	              <a href="/buildmodely" class="btn btn-primary">지금 주문하기<i class="fa fa-long-arrow-right"></i></a>
 	            </div>
 			</div>
 			<div class="col-md-8">  
@@ -413,7 +413,7 @@
 					<div class="feature_content wow fadeIn m-top-50">
 						<h3 style="color:white;">Model Y</h3>
 						<div class="feature_btns m-top-30">
-							<a href="/carbuild" class="btn btn-default text-uppercase">지금 주문하기<i class="fa fa-long-arrow-right"></i></a>
+							<a href="/buildmodely" class="btn btn-default text-uppercase">지금 주문하기<i class="fa fa-long-arrow-right"></i></a>
 						</div>
 					</div>
 				</div>
