--- a/multisla/src/main/resources/templates/detail/modelXdetail.html
+++ b/multisla/src/main/resources/templates/detail/modelXdetail.html
@@ -82,7 +82,7 @@
 				    </div>
 				    <div class="text-right feature_photo wow fadeInUp col-md-3">
 				        <div class="pricing_btn m-top-20">
-		                    <a href="/carbuild" class="btn btn-success">지금 주문하기<i class="fa fa-long-arrow-right"></i></a>
+		                    <a href="/buildmodelx" class="btn btn-success">지금 주문하기<i class="fa fa-long-arrow-right"></i></a>
 		                </div>
 				    </div>
 				</div>				
@@ -278,7 +278,7 @@
 			<div class="col-md-4">
 			    <h2>루디크러스를 넘어</h2>
 			    <div class="pricing_btn m-top-30">
-              		<a href="/carbuild" class="btn btn-primary">지금 주문하기<i class="fa fa-long-arrow-right"></i></a>
+              		<a href="/buildmodelx" class="btn btn-primary">지금 주문하기<i class="fa fa-long-arrow-right"></i></a>
             	</div>
             	<div class="pricing_btn m-top-50"></div>
             </div>
@@ -309,7 +309,7 @@
 	       </div>		            	
 	       <div class="selectbox2">
 		       <div class="pricing_btn m-top-20">
-		             <a href="/carbuild" class="btn btn-success">지금 주문하기<i class="fa fa-long-arrow-right"></i></a>
+		             <a href="/buildmodelx" class="btn btn-success">지금 주문하기<i class="fa fa-long-arrow-right"></i></a>
 		        </div>
 	       </div>
     	</div>
@@ -407,7 +407,7 @@
 			            </div>		            	
 			            <div class="selectbox2">
 				        <div class="pricing_btn m-top-20">
-			                   <a href="/carbuild" class="btn btn-primary">지금 주문하기<i class="fa fa-long-arrow-right"></i></a>
+			                   <a href="/buildmodelx" class="btn btn-primary">지금 주문하기<i class="fa fa-long-arrow-right"></i></a>
 			               </div>
 			            </div>
 		      		</div>
@@ -614,7 +614,7 @@
 					<div class="feature_content wow fadeIn m-top-50">
 						<h3 style="color:white;">Model Y</h3>
 						<div class="feature_btns m-top-30">
-							<a href="/carbuild" class="btn btn-default text-uppercase">지금 주문하기<i class="fa fa-long-arrow-right"></i></a>
+							<a href="/buildmodelx" class="btn btn-default text-uppercase">지금 주문하기<i class="fa fa-long-arrow-right"></i></a>
 						</div>
 					</div>
 				</div>
