--- a/multisla/src/main/resources/templates/index.html
+++ b/multisla/src/main/resources/templates/index.html
@@ -147,9 +147,9 @@
                     <div class="collapse navbar-collapse" id="navbar-menu">
                         <ul class="nav navbar-nav navbar-right" data-in="fadeInDown" data-out="fadeOutUp">
                             <li><a href="/">home</a></li> 
-							<li><a href="#">MODEL S</a></li> 							                   
-                            <li><a href="#">MODEL X</a></li> 							
-                            <li><a href="#">MODEL Y</a></li>                                      
+							<li><a href="/models">MODEL S</a></li> 							                   
+                            <li><a href="/modelx">MODEL X</a></li> 							
+                            <li><a href="/modely">MODEL Y</a></li>                                      
                                             
                         </ul>
                     </div><!-- /.navbar-collapse -->
