--- a/multisla/src/main/resources/templates/garage/garage.html
+++ b/multisla/src/main/resources/templates/garage/garage.html
@@ -13,9 +13,9 @@
                             <div class="col-md-12 m-bottom-60">
                                 <div class="filters-button-group sm-text-center">
                                     <button class="button is-checked" data-filter="*">View all</button>
-                                    <button class="button" data-filter=".models">MODEL S</button>
-                                    <button class="button" data-filter=".modelx">MODEL X</button>
-                                    <button class="button" data-filter=".modely">MODEL Y</button>
+                                    <button class="button" data-filter=".S">MODEL S</button>
+                                    <button class="button" data-filter=".X">MODEL X</button>
+                                    <button class="button" data-filter=".Y">MODEL Y</button>
                                    
                                 </div>
                             </div>
