detail/homepage logo

--- a/multisla/src/main/resources/templates/detail/modelXdetail.html
+++ b/multisla/src/main/resources/templates/detail/modelXdetail.html
@@ -380,43 +380,6 @@
 	    </div>
 	</div>
 </div><!-- End off Design More Section-->
-
-<!--Cruise Sections-->
-<section id="feature" class="feature p-top-100">
-    <div class="row">
-			<div class="main_feature">
-				<div class="col-md-7">
-					<div class="feature_photo wow fadeIn sm-m-top-40">
-						<div class="feature_img">
-							<video loop autoplay width="900px" preload="auto" muted controls>
-								<source src="https://tesla-cdn.thron.com/delivery/public/video/tesla/c63301a9-96bc-463d-9e5d-65f581cd87d6/bvlatuR/WEBHD/Range_Desktop">
-							</video>
-						</div>
-					</div>
-				</div>
-				
-				<div class="feature_photo wow fadeInRight col-md-4">
-		      		<div style="margin: 50px;">
-			       		<div style="margin-top: 50px;">
-							<h2 class="text-black">자유로운 장거리 여행</h2>
-			            </div>
-			            <div style="margin-top: 50px;">
-							<h6>Model Y는 순수 전기차로 주유소에 갈 필요가 없습니다. 집에서 충전한 후에 아침에 일어나면 이미 충전이 완료되어 있습니다. 도로에서 주행 중일 때는 공공 충전소나 Tesla의 충전 네트워크에서 쉽게 충전할 수 있습니다. 전 세계에 30,000대 이상의 Tesla 수퍼차저가 설치되어 있으며 매주 여섯 곳에 새로운 수퍼차저가 설치됩니다.</h6>
-							<p>‡표시된 주행 가능 거리는 속도, 기상 조건 및 도로 상태 등의 외부 요인에 따라 달라질 수 있습니다.</p>
-							<p>**표시된 수치는 V3 수퍼차저 충전 기준이며, 수퍼차저의 종류, 배터리 컨디션 및 외부 온도 등에 따라 충전시간과 주행 가능 거리는 달라질 수 있습니다.</p>
-			            </div>		            	
-			            <div class="selectbox2">
-				        <div class="pricing_btn m-top-20">
-			                   <a href="/buildmodelx" class="btn btn-primary">지금 주문하기<i class="fa fa-long-arrow-right"></i></a>
-			               </div>
-			            </div>
-		      		</div>
-				</div>	
-				<div class="col-md-1"></div>		
-			</div>
-		</div>
-</section><!--End off Cruise -->
-
 <!-- Auto Pilot Section-->
 <section id="feature" class="modely">
 	<div class="service_content_area">
@@ -504,13 +467,49 @@
 	</div>
 
 </section><!-- Auto Pilot Section-->
+<!--Cruise Sections-->
+<section id="feature" class="feature p-top-100">
+    <div class="row">
+			<div class="main_feature">
+				<div class="col-md-7">
+					<div class="feature_photo wow fadeIn sm-m-top-40">
+						<div class="feature_img">
+							<video loop autoplay width="900px" preload="auto" muted controls>
+								<source src="https://tesla-cdn.thron.com/delivery/public/video/tesla/c63301a9-96bc-463d-9e5d-65f581cd87d6/bvlatuR/WEBHD/Range_Desktop">
+							</video>
+						</div>
+					</div>
+				</div>
+				
+				<div class="feature_photo wow fadeInRight col-md-4">
+		      		<div style="margin: 50px;">
+			       		<div style="margin-top: 50px;">
+							<h2 class="text-black">자유로운 장거리 여행</h2>
+			            </div>
+			            <div style="margin-top: 50px;">
+							<h6>Model Y는 순수 전기차로 주유소에 갈 필요가 없습니다. 집에서 충전한 후에 아침에 일어나면 이미 충전이 완료되어 있습니다. 도로에서 주행 중일 때는 공공 충전소나 Tesla의 충전 네트워크에서 쉽게 충전할 수 있습니다. 전 세계에 30,000대 이상의 Tesla 수퍼차저가 설치되어 있으며 매주 여섯 곳에 새로운 수퍼차저가 설치됩니다.</h6>
+							<p>‡표시된 주행 가능 거리는 속도, 기상 조건 및 도로 상태 등의 외부 요인에 따라 달라질 수 있습니다.</p>
+							<p>**표시된 수치는 V3 수퍼차저 충전 기준이며, 수퍼차저의 종류, 배터리 컨디션 및 외부 온도 등에 따라 충전시간과 주행 가능 거리는 달라질 수 있습니다.</p>
+			            </div>		            	
+			            <div class="selectbox2">
+				        <div class="pricing_btn m-top-20">
+			                   <a href="/buildmodelx" class="btn btn-primary">지금 주문하기<i class="fa fa-long-arrow-right"></i></a>
+			               </div>
+			            </div>
+		      		</div>
+				</div>	
+				<div class="col-md-1"></div>		
+			</div>
+		</div>
+</section><!--End off Cruise -->
+
 
 
 
 
 <!--Testimonial Section-->
-<div class="pricing_btn m-top-40" style="background-color: black;">
-<section id="testimonial" class="testimonial fix roomy-100">
+<div class="pricing_btn" style="background-color: black;">
+<section id="testimonial" class="testimonial fix roomy-30" >
     <div class="container">
         <div class="row">
             <div class="main_testimonial text-center">
@@ -601,7 +600,7 @@
         </div><!--End off row-->
     </div><!--End off container -->
 </section> <!--End off Testimonial section -->
-
+</div>
 
 <!--About Sections-->
 <section id="feature" class="feature p-top-100">
@@ -612,16 +611,16 @@
 				<div class="col-md-3 m-top-10">
 				
 					<div class="feature_content wow fadeIn m-top-50">
-						<h3 style="color:white;">Model Y</h3>
+						<h3>Model X</h3>
 						<div class="feature_btns m-top-30">
-							<a href="/buildmodelx" class="btn btn-default text-uppercase">지금 주문하기<i class="fa fa-long-arrow-right"></i></a>
+							<a href="/buildmodelx" class="btn btn-primary text-uppercase">지금 주문하기<i class="fa fa-long-arrow-right"></i></a>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-9">
 					<div class="feature_photo wow fadeIn sm-m-top-40">
 						<div class="feature_img">
-							<img src="assets/images/model/ModelY_Order_Hero.avif">
+							<img src="assets/images/model/Model-X-Order.jpg">
 						</div>
 					</div>
 				</div>
@@ -629,6 +628,6 @@
 		</div><!--End off row-->
 	</div><!--End off container -->
 </section>
-</div>
+
 
 </html>
