--- a/multisla/src/main/resources/static/assets/css/style.css
+++ b/multisla/src/main/resources/static/assets/css/style.css
@@ -97,6 +97,10 @@ section { overflow: hidden; }*/
     padding-top: 40px;
     padding-bottom: 40px;
 }
+.roomy-30 {
+    padding-top: 30px;
+    padding-bottom: 100px;
+}
 
 
 /*text color*/
@@ -424,6 +428,12 @@ Button
     border-color: #fff;
     padding: 0.8rem 2.5rem;
     border-radius: 30px;
+}
+
+.btn-success:hover{
+    background-color: #8E93A3;
+    border-color: #8E93A3;
+    color:#fff;
 }
 .btn-info{}
 .btn-warning{}
