--- a/multisla/src/main/resources/templates/detail/modelSdetail.html
+++ b/multisla/src/main/resources/templates/detail/modelSdetail.html
@@ -73,7 +73,7 @@
 				    </div>
 				    <div class="col-md-4">
 				        <div class="pricing_btn m-top-20">
-		                    <a href="/buildmodels" class="btn btn-primary">지금 주문하기<i class="fa fa-long-arrow-right"></i></a>
+		                    <a href="/buildmodels" class="btn btn-success">지금 주문하기<i class="fa fa-long-arrow-right"></i></a>
 		                </div>
 				    </div>
 				</div>
@@ -351,7 +351,7 @@
 			    <p>Model S Plaid는 현존하는 양산 차량 중 가장 빠른 가속력을 자랑하는 차량 중 하나입니다. 모든 Model S는 업데이트된 배터리 구조를 통해 반복적인 트랙 주행에도 성능 저하가 일어나지 않습니다.</p>
 			
 			
-			    <a href="/buildmodels" class="btn btn-default m-top-20">지금 주문하기<i class="fa fa-long-arrow-right"></i></a>
+			    <a href="/buildmodels" class="btn btn-primary m-top-20">지금 주문하기<i class="fa fa-long-arrow-right"></i></a>
 			</div>
 		</div>
 	</div>
@@ -487,7 +487,7 @@
 			    <p>Model S는 0.208 Cd에 불과한 공기저항 계수를 자랑하며 속도, 내구성 및 주행 가능 거리를 위해 설계되었습니다. 향상된 공기역학 성능과 더 넓어진 차체는 더 빠른 응답성을 발휘하여 운전자가 더 빠르고 자신 있게 코너를 주행할 수 있습니다.</p>
 			
 			
-			    <a href="/buildmodels" class="btn btn-default m-top-20">지금 주문하기<i class="fa fa-long-arrow-right"></i></a>
+			    <a href="/buildmodels" class="btn btn-primary m-top-20">지금 주문하기<i class="fa fa-long-arrow-right"></i></a>
 			</div>
 		</div>
 	</div>
@@ -583,7 +583,7 @@
 						
 						<p>**표시된 수치는 V3 수퍼차저 충전 기준이며, 수퍼차저의 종류, 배터리 컨디션 및 외부 온도 등에 따라 충전시간과 주행 가능 거리는 달라질 수 있습니다.</p>
 						<div class="feature_btns m-top-30">
-							<a href="/buildmodels" class="btn btn-default text-uppercase">지금 주문하기<i class="fa fa-long-arrow-right"></i></a>
+							<a href="/buildmodels" class="btn btn-primary text-uppercase">지금 주문하기<i class="fa fa-long-arrow-right"></i></a>
 						</div>
 					</div>
 				</div>
@@ -793,7 +793,7 @@
 						<h3>Model S</h3>
 						
 						<div class="feature_btns m-top-30">
-							<a href="/buildmodels" class="btn btn-default text-uppercase">지금 주문하기<i class="fa fa-long-arrow-right"></i></a>
+							<a href="/buildmodels" class="btn btn-primary text-uppercase">지금 주문하기<i class="fa fa-long-arrow-right"></i></a>
 						</div>
 					</div>
 				</div>
