--- a/multisla/src/main/resources/templates/detail/modelYdetail.html
+++ b/multisla/src/main/resources/templates/detail/modelYdetail.html
@@ -413,7 +413,7 @@
 					<div class="feature_content wow fadeIn m-top-50">
 						<h3 style="color:white;">Model Y</h3>
 						<div class="feature_btns m-top-30">
-							<a href="/buildmodely" class="btn btn-default text-uppercase">지금 주문하기<i class="fa fa-long-arrow-right"></i></a>
+							<a href="/buildmodely" class="btn btn-success text-uppercase">지금 주문하기<i class="fa fa-long-arrow-right"></i></a>
 						</div>
 					</div>
 				</div>
