--- a/multisla/src/main/resources/templates/carbuild/modelS.html
+++ b/multisla/src/main/resources/templates/carbuild/modelS.html
@@ -31,14 +31,16 @@
 }
 </style>
 <script th:inline="javascript">
+// 쿠키 저장 함수
 function setCookie(cname, cvalue, exdays) {
   const d = new Date();
   d.setTime(d.getTime() + (exdays*24*60*60*1000));
   let expires = "expires="+ d.toUTCString();
   document.cookie = cname + "=" + cvalue + ";" + expires + ";path=/";
 }
+
 $(document).ready(function(){
-	
+	// change image by clicking options
 	$("#carimg").attr('src', 'assets/images/carbuild/models/models_black_w19.png')
 	$('input[name="colid"], input[name="wid"]').click(function(){
 		var c = $('input[name="colid"]:checked').val();
@@ -78,7 +80,6 @@ $(document).ready(function(){
 			}
 		};
 	});
-	
 	$('input[name="iid"]').click(function(){
 		var i = $('input[name="iid"]:checked').val();
 		$("#carimg").attr('width','1400px');
@@ -98,9 +99,6 @@ $(document).ready(function(){
 		var wid = $('input[name="wid"]:checked').val();
 		var iid = $('input[name="iid"]:checked').val();
 		var corder = 0;
-/*		var obj = {mid:mid, colid:colid, wid:wid, iid:iid, corder:corder};
-		console.log(obj);
-		console.log(session);*/
 		if (session == '{}') {
 			// 로그인 정보가 없을 때
 			// 쿠키에 견적 저장
@@ -110,9 +108,14 @@ $(document).ready(function(){
 			setCookie('wid',wid,1);
 			setCookie('iid',iid,1);
 			setCookie('corder',corder,1);
-			
+			var result = confirm('로그인 하시겠습니까?');
+			if (result) {
+				location.href = '/buildlogin';
+			}
+			//$('#togarage').attr('href','/buildlogin');
 		}else {
 			// 로그인 정보가 있을 때
+			// carbuild와 garage에 register하고
 			// 바로 garage로 이동
 			$('#build').attr({
 				'method':'post',
@@ -165,6 +168,8 @@ $(document).ready(function(){
 		
 			<!-- 옵션 선택 폼 -->
 			<form class="select-options" id="build">
+				<input type="hidden" th:if="${session.loginusers != null}" th:value="${session.loginusers.uid}" name="uid">
+				<input type="hidden" value="100" name="mid">
 			<!-- 모델명 -->
 			
 				<!-- 색상 -->
