--- a/multisla/src/main/resources/templates/carbuild/modelY.html
+++ b/multisla/src/main/resources/templates/carbuild/modelY.html
@@ -28,7 +28,15 @@
 	border-color: #4374D9;
 }
 </style>
-<script>
+<script th:inline="javascript">
+// 쿠키 저장 함수
+function setCookie(cname, cvalue, exdays) {
+	const d = new Date();
+	d.setTime(d.getTime() + (exdays*24*60*60*1000));
+	let expires = "expires="+ d.toUTCString();
+	document.cookie = cname + "=" + cvalue + ";" + expires + ";path=/";
+}
+
 $(document).ready(function(){
 	$("#carimg").attr('src', 'assets/images/carbuild/modely/modely_black_w19.png')
 	$('input[name="colid"], input[name="wid"]').click(function(){
@@ -81,6 +89,39 @@ $(document).ready(function(){
 			$("#carimg").attr('src','assets/images/carbuild/modely/modely_white_interior.jpg').fadeIn(300);
 		};
 	});
+	
+	$('#togarage').click(function(){
+		var session = '[[${session}]]';
+		var mid = 101;
+		var colid = $('input[name="colid"]:checked').val();
+		var wid = $('input[name="wid"]:checked').val();
+		var iid = $('input[name="iid"]:checked').val();
+		var corder = 0;
+		if (session == '{}') {
+			// 로그인 정보가 없을 때
+			// 쿠키에 견적 저장
+			// 로그인 페이지로 이동하고 로그인 후 쿠키를 garage에 저장
+			setCookie('mid',mid,1);
+			setCookie('colid',colid,1);
+			setCookie('wid',wid,1);
+			setCookie('iid',iid,1);
+			setCookie('corder',corder,1);
+			var result = confirm('로그인 하시겠습니까?');
+			if (result) {
+				location.href = '/buildlogin';
+			}
+			//$('#togarage').attr('href','/buildlogin');
+		}else {
+			// 로그인 정보가 있을 때
+			// carbuild와 garage에 register하고
+			// 바로 garage로 이동
+			$('#build').attr({
+				'method':'post',
+				'action':'/gogarage'
+			});
+			$('#build').submit();
+		}
+	});
 });
 </script>
 
@@ -124,7 +165,9 @@ $(document).ready(function(){
 			</div>
 		
 			<!-- 옵션 선택 폼 -->
-			<form class="select-options">
+			<form class="select-options" id="build">
+				<input type="hidden" th:if="${session.loginusers != null}" th:value="${session.loginusers.uid}" name="uid">
+				<input type="hidden" value="101" name="mid">
 			<!-- 모델명 -->
 			
 				<!-- 색상 -->
@@ -222,7 +265,7 @@ $(document).ready(function(){
 						<h3 class="text-black text-center">내 차고에 담기</h3>
 					</div>
 					<div class="home_text text-center">
-						<button type="button" onClick="location.href='#'" class="btn btn-primary">차고에 담기</button>
+						<button type="button" class="btn btn-primary" id="togarage">차고에 담기</button>
 					</div>
 				</div>
 			</form>
